# AI-Enhanced-Platform-for-Data-Integrity-Risk-Assessment

./: .gitignore  README.md  docker-compose.yml
Annex files/: Knowledge_base.xlsx
backend/: .Dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py
backend/app/RAG/: embedding.py  llm_provider.py  prompt_template.py  retrieval.py
backend/app/db/: db.py  models.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/public/formulaire/: Formulaire.xlsx  manifest.json
frontend/public/pdfs_reglementation/: README.md  manifest.json
frontend/public/standard/: manifest.json
frontend/src/: app.css  app.tsx  i18n.ts  index.css  main.tsx  types.ts
frontend/src/components/: ExportGapsModal.tsx  LogigramModal.tsx  SiteContext.tsx  navbar.tsx  user_input.tsx
frontend/src/locales/: en.json  fr.json
frontend/src/pages/: ExcelViewer.tsx  Library.tsx  SystemDataManagement.tsx  Viz.tsx  Welcome.tsx  conversational_llm.tsx
frontend/src/styles/: data_upload.css  dropdown.css  excel-viewer.css  library.css  llm.css  logigram.css  navbar.css  pdf-export.css  user_input.css  viz.css
frontend/src/utils/: chartOptions.ts  colorUtils.ts  exportGapsToExcel.ts  pdfExport.ts  useChart.ts  useGlobalData.ts  usePageState.ts  useSiteData.ts
